base/process/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-process
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-process
  template:
    metadata:
      labels:
        app: ms-process
    spec:
      imagePullSecrets:
      - name: oci-registry
      containers:
        - name: ms-process
          image: iad.ocir.io/idwwmbyiyhww/meta-ms-process:latest
          ports:
            - containerPort: 3000
              protocol: TCP
