base/process/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-process
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: ms-process
  sessionAffinity: None
  type: ClusterIP
