base/process/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: process 
  namespace: meta-ms

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`process.cmstg.metaformers.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: ms-process
      port: 3000
